--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: base
 <div class="container-fluid">
   <div class="header">
     {% if site.personal_site %}
-    <p><a href="{{site.personal_site.url}}">&#x2190; {{site.personal_site.title}}</a></p>
+    <p><a href="{{site.personal_site.url}}">; {{site.personal_site.title}}</a></p>
     {% endif %}
     <h1>{{ site.title }}</h1>
     <p>Timelines are a fun way to visualize someone's life and get to know them quickly. This is my timeline, as of <a href="#bottom" title="Scroll to bottom">{{ site.time | date: '%B %Y' }}</a>.
@@ -56,7 +56,5 @@ layout: base
 
   <a id="bottom"></a>
   <p class="footer">
-    &copy; {{ site.author }} {{ site.time | date: '%Y' }}<br/>
-    Made with ♥ and <a href="https://github.com/neilgupta/timeliner" target="_blank" rel="noopener noreferrer" title="Make your own!">Timeliner</a>
   </p>
 </div>
