--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ layout: base
     {% if site.personal_site %}
     <p><a href="{{site.personal_site.url}}">; {{site.personal_site.title}}</a></p>
     {% endif %}
-    <h1>{{ site.title }}</h1>
-    <p>Timelines are a fun way to visualize someone's life and get to know them quickly. This is my timeline, as of <a href="#bottom" title="Scroll to bottom">{{ site.time | date: '%B %Y' }}</a>.
+    <H1><span style="color:green">{{ site.title }}</span></H1>
       {% if site.linkedin %}
         For professional milestones, see <a href="{{site.linkedin}}" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
       {% endif %}
