--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: base
 <div class="container-fluid">
   <div class="header">
     {% if site.personal_site %}
-    <p><a href="{{site.personal_site.url}}">; {{site.personal_site.title}}</a></p>
+    <p><a href="{{site.personal_site.url}}"><span style="color:blue">{{site.personal_site.title}}</span></a></p>
     {% endif %}
     <H1><span style="color:green">{{ site.title }}</span></H1>
       {% if site.linkedin %}
