--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: base
 
 <div class="container-fluid">
   <div class="header">
+    <H1><p><a href="{http://ags.aarongs.org/}"><span style="color:blue">{Inicio}</span></a></p></H1>&|&<H1><p><a href="{https://trayectoria.aarongs.org/}"><span style="color:blue">{Trayectoria}</span></a></p></H1>&|&<H1><p><a href="{https://AaronGS1999.github.io/aarongs.github.io/Publicaciones.html}"><span style="color:blue">{Publicaciones}</span></a></p></H1>
     {% if site.personal_site %}
     <p><a href="{{site.personal_site.url}}"><span style="color:blue">{{site.personal_site.title}}</span></a></p>
     {% endif %}
