--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: base
 
 <div class="container-fluid">
   <div class="header">
-    <H1><p><a href="http://ags.aarongs.org/"><span style="color:blue">{Inicio}</span>||</a></H1>
+    <H1><p><a href="http://ags.aarongs.org/"><span style="color:blue">{Inicio}</span><span style="color:black">|</span></a></H1>
     <H1><span style="color:green">{{ site.title }}</span></H1>
       {% if site.linkedin %}
         For professional milestones, see <a href="{{site.linkedin}}" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
