--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: base
 
 <div class="container-fluid">
   <div class="header">
-    <H1><a href="http://ags.aarongs.org/"><span style="color:blue">Inicio</span><span style="color:black">|</span><a href="https://trayectoria.aarongs.org/"><span style="color:blue">Trayectoria</span><span style="color:black">|</span><a href="https://AaronGS1999.github.io/aarongs.github.io/Publicaciones.html"><span style="color:blue">Publicaciones</span></H1>
+    <H1><a href="http://ags.aarongs.org/"><span style="color:green">Inicio</span><span style="color:black">|</span><a href="https://trayectoria.aarongs.org/"><span style="color:green">Trayectoria</span><span style="color:black">|</span><a href="https://AaronGS1999.github.io/aarongs.github.io/Publicaciones.html"><span style="color:green">Publicaciones</span></H1>
     <H2><span style="color:green">{{ site.title }}</span></H2>
       {% if site.linkedin %}
         For professional milestones, see <a href="{{site.linkedin}}" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
